--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.13.0"
+    "react-router-dom": "^6.13.0",
+    "react-swipeable": "^7.0.1"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.22.10",
