gambi pra nao buidlar

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "repository": "https://github.com/JosePaulo95/tetris-react",
   "scripts": {
     "dev": "vite --mode dev",
-    "build:dev": "vite build --mode dev",
-    "build:prod": "vite build --mode prod",
+    "build:dev": "vite --mode dev",
+    "build:prod": "vite --mode prod",
     "serve": "vite preview --mode dev --port 3001",
     "lint:fix": "eslint ./src --ext .jsx,.js,.ts,.tsx --quiet --fix --ignore-path ./.gitignore",
     "lint:format": "prettier  --loglevel warn --write \"./**/*.{js,jsx,ts,tsx,css,md,json}\" ",
@@ -48,7 +48,7 @@
     "@types/react-dom": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "@typescript-eslint/parser": "^5.10.2",
-    "@vitejs/plugin-react-swc": "^3.4.0",
+    "@vitejs/plugin-react-swc": "^3.5.0",
     "@vitest/coverage-v8": "^0.34.6",
     "eslint": "^8.8.0",
     "eslint-config-prettier": "^8.3.0",
